# dd

./: CMakeLists.txt
inc/: blob.h  hash.h  hash_object.h  object.h
src/: blob.cpp  hash.cpp  hash_object.cpp  main.cpp  object.cpp
